# FuglyBot

./: .gitignore  default-dict.txt  fuglybot.cabal
fugly/: default-dict.txt
src/: FuglyBot.hs  FuglyLib.hs  LICENSE  Parameter.hs  Reply.hs  Sentence.hs  SentenceA.hs
src/Data/: MarkovChain.hs
src/Fugly/: Command.hs  LoadSave.hs  Neural.hs  Parameter.hs  Reply.hs  Types.hs
src/NLP/: WordNet.hs
src/NLP/WordNet/: Common.hs  Consts.hs  PrimTypes.hs  Prims.hs  Types.hs  Util.hs
