Name:            FuglyBot
Version:         0.1.0
Description:     FuglyBot is an IRC bot.
Category:        IRC bot
Synopsis:        FuglyBot is an IRC bot which features grammar checking
                 (Grammatical Framework), spell checking (aspell bindings),
                 and word cross-referencing (WordNet).
License:         MIT
License-file:    src/LICENSE
Author:          tully.gray@anapnea.net
Maintainer:      tully.gray@anapnea.net
Build-type:      Simple
Cabal-version:   >= 1.8

Library
    Build-depends:   base == 4.*, array, bytestring, containers, edit-distance,
                     filepath, gf, haspell, random, regex-posix, transformers
    Hs-source-dirs:  src
    Exposed-Modules: FuglyLib, NLP.WordNet
    Other-Modules:
        NLP.WordNet.Common
        NLP.WordNet.PrimTypes
        NLP.WordNet.Util
        NLP.WordNet.Consts
        NLP.WordNet.Prims
        NLP.WordNet.Types
    -- Extra-libraries: jemalloc
    GHC-Options: -rtsopts=all -O2 -threaded -Wall -fno-prof-count-entries

Executable fuglybot
    Main-is:         FuglyBot.hs
    Build-depends:   base == 4.*, array, bytestring, containers, edit-distance,
                     filepath, gf, haspell, network, parallel, random,
                     regex-posix, socks, transformers
    Hs-source-dirs:  src
    -- Extra-libraries: jemalloc
    GHC-Options: -rtsopts=all -O2 -threaded -Wall -fno-prof-count-entries
