Name:            FuglyBot
Version:         0.2.0
Synopsis:        FuglyBot is an IRC bot.
Category:        IRC bot
Description:     FuglyBot is an IRC bot which features grammar checking,
                 spell checking, a neural network, and word cross-referencing.
License:         MIT
License-file:    src/LICENSE
Author:          tully.gray@anapnea.net
Maintainer:      tully.gray@anapnea.net
Build-type:      Simple
Cabal-version:   >= 1.8

Source-Repository head
    Type:     git
    Location: https://github.com/shadowdaemon/FuglyBot.git

Library
    Build-depends:   base == 4.*, array, bytestring, containers, edit-distance,
                     filepath, gf, haspell, random, regex-posix, simple-neural-networks,
                     transformers
    Hs-source-dirs:  src
    Exposed-Modules: FuglyLib, NLP.WordNet
    Other-Modules:
        NLP.WordNet.Common
        NLP.WordNet.PrimTypes
        NLP.WordNet.Util
        NLP.WordNet.Consts
        NLP.WordNet.Prims
        NLP.WordNet.Types
    GHC-Options: -rtsopts=all -Wall -fno-prof-count-entries

Executable fuglybot
    Main-is:         FuglyBot.hs
    Build-depends:   base == 4.*, array, bytestring, containers, edit-distance,
                     filepath, gf, haspell, network, parallel, random,
                     regex-posix, simple-neural-networks, socks, transformers
    Hs-source-dirs:  src
    GHC-Options: -rtsopts=all -threaded -Wall -fno-prof-count-entries
